# basic-cmake-swig

./: CMakeLists.txt  README.md  main.java  testrun.sh
include/: example.h
onefilesample/: CMakeLists.txt  main.java  sample.h  sample.i  testrun.sh
src/: example.c
swig/: example.i
